# livemem

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  README.md  TODO.md  pyproject.toml
.agent/: AGENT.md
src/livemem/: __init__.py  api.py  cli.py  config.py  config.yaml  daemon.py  embedder.py  graph.py  index.py  memory.py  persistence.py  types.py
src/livemem/embeddings/: __init__.py  base.py  factory.py  fastembed_cross_encoder.py  fastembed_text.py  mock.py
tests/: conftest.py  test_api.py  test_config.py  test_daemon.py  test_graph.py  test_index.py  test_memory.py  test_persistence.py  test_retrieval.py  test_sleep.py  test_types.py  test_urgency_retrieval.py
